--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.2.3",
     "phosphor-react": "^1.4.0",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
